fix layout overlap with popper elements

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,4 +1,5 @@
 .layout {
+  z-index: 1;
   .header {
     background-color: #fff;
     box-shadow: 1px 1px 4px #9aa0b9;
